--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
-<!DOCTYPE HTML>
-<HTML>
-  <HEAD>
-    <TITLE>
-      WUREWOF
-    </TITLE>
-  </HEAD>
-  <BODY>
-    
-  </BODY>
-</HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wurewof</title>
+
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Eczar&display=swap" rel="stylesheet">
+
+</head>
+<body>
+  
+<header>
+  <nav class="navbar">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#skill">Skill</a>
+    <a href="#review">Review</a>
+    <a href="#contact">Contact</a>
+    <a href="#portofolio">Portofolio</a>
+  </nav>
+
+  <a href="#" class="logo"> gambar logo</a>
+
+
+</header>
+
+<section class="home" id="home">
+
+  <div class="content">
+    <h3>Hello Everyone!</h3>
+    <span>I’m Cindy Amelia, </span><br>
+    <span>A Private Tutor</span><br>
+    <a href="#" class="btn"> Contact Me</a>
+  </div>
+  
+</section>
+
+
+</body>
+</html>
