--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Eczar&display=swap" rel="stylesheet">
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </head>
 <body>
@@ -23,7 +24,7 @@
     <a href="#portofolio">Portofolio</a>
   </nav>
 
-  <a href="#" class="logo"> gambar logo</a>
+  <a href="#" class="logo"> <img src="logoca.png" alt="animasi cewek">></a>
 
 
 </header>
@@ -31,14 +32,44 @@
 <section class="home" id="home">
 
   <div class="content">
-    <h3>Hello Everyone!</h3>
+   <h3>Hello Everyone!</h3><br>
     <span>I’m Cindy Amelia, </span><br>
     <span>A Private Tutor</span><br>
     <a href="#" class="btn"> Contact Me</a>
   </div>
-  
+
 </section>
 
+<section class="about" id="about">
+
+  <h1 class="heading"> <span> Who</span> <span> Am</span><span class="I"> I</span><span>?</span></h1>
+
+  <div class="row">
+    <div class="content">
+      <h3> A Little Bit About Me</h3>
+      <p>
+        I am Cindy Amelia from Pontianak, Indonesia. <br> I am an Private Tutor for ten students for around two years.<br>
+        </p>
+        <p>
+        Specifically I teach English and Mandarin lessons. On the other hand, I teach all lessons for primary school students beside Arab language. <br>
+        </p>
+        <p>
+        Besides teaching, I like to write poems, stories and sing songs.
+        </p>
+      </p>
+      <a href="#" class="btn"> Contact Me</a>
+    </div>
+    
+      <div class="kartun_cewek">
+        <img src="cewe.png" alt="animasi cewek">
+      </div>
+      
+  </div>
+
+
+
+  
+</section>
 
 </body>
 </html>
