membuat section contact dan finalisasi design web

--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
 
   <section class="contact" id="contact">
 
-    <h1 class="heading"> Reach<span class="I"> Me</span> Out !</h1>
+    <h1 class="heading"> Reach<span class="I"> Me</span> Out!</h1>
 
     <div class="rows">
       <div class="pic-container"> 
         <img src="bgbuku.png" alt="bg buku">
-        <h1>Teaching is my passion. <br> Learing is your passion.</h1>
+        <h1>Teaching is my passion. <br> Learning is your passion.</h1>
       </div>
     
     <div class="box-cont">
